syntax="proto3";
package chat_svc;

message Chat {
    int32 id = 1;
    string message = 2;
    int32 userId = 3;
    string roomId = 4;
}

message Message {
    string message = 2;
    int32 userId = 3;
    string roomId = 4;
}

service ChatService {
    rpc AddMessage(Message) returns (Chat) {}
}